--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <div class="container">
         <div class="section-header">
           <h2>Services</h2>
-          <p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+          <p>Our website developers provide expert web application development and web design services to our clients. Bery offers a variety of website design and development services, from creating mobile web development solutions and responsive website designs, to building custom e-commerce and intranet experiences using the latest and proven web technologies.we have dedicated team of professional designers and developers, creating powerful and engaging websites. We use ultra-clean and bold design style to provide standards-based markup code for your websites</p>
         </div>
 
         <div class="row">
