--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <div class="container">
         <div class="section-header">
           <h2>Services</h2>
-          <p>Our website developers provide expert web application development and web design services to our clients. Bery offers a variety of website design and development services, from creating mobile web development solutions and responsive website designs, to building custom e-commerce and intranet experiences using the latest and proven web technologies.we have dedicated team of professional designers and developers, creating powerful and engaging websites. We use ultra-clean and bold design style to provide standards-based markup code for your websites</p>
+          <p>Our website developers provide expert web application development and web design services to our clients. Bery offers a variety of website design and development services, from creating mobile web development solutions and responsive website designs using the latest and proven web technologies.We have a dedicated team of professional designers and developers, creating powerful and engaging websites. We use ultra-clean and bold design style to provide standards-based markup code for your websites</p>
         </div>
 
         <div class="row">
